--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1,
   maximum-scale=5" />
-  <link rel="stylesheet" href="/public/bundle.css">
+  <link rel="stylesheet" href="public/bundle.css">
   <script defer src="public/bundle.js"></script>
   <title>Devchallenges</title>
 </head>
